--- a/front.css
+++ b/front.css
@@ -382,3 +382,42 @@ table.attmgr_guide_weekly .dow {
 	margin-top: 5px;
 }
 
+/*
+ *	Mobile
+ */
+@media screen and (max-width: 480px) {
+	table.attmgr_monthly_schedule th,
+	table.attmgr_monthly_schedule td,
+	table.attmgr_admin_scheduler th,
+	table.attmgr_admin_scheduler td,
+	table.attmgr_weekly th,
+	table.attmgr_weekly td,
+	table.attmgr_weekly_all th,
+	table.attmgr_weekly_all td {
+		padding:0;
+		font-size: x-small;
+		font-weight: normal;
+	}
+	table.attmgr_monthly_schedule .date,
+	table.attmgr_monthly_schedule .dow,
+	table.attmgr_admin_scheduler .date,
+	table.attmgr_admin_scheduler .dow,
+	table.attmgr_weekly .date,
+	table.attmgr_weekly .dow,
+	table.attmgr_weekly_all .date,
+	table.attmgr_weekly_all .dow {
+		display:block;
+		line-height: 1.3em;
+	}
+	table .portrait img {
+		/*
+		width: auto !important;
+		height: auto !important;
+		*/
+	}
+	.list_pagenavi,
+	.list_datenavi {
+		font-size: x-small;
+	}
+}
+
